Fix-up PatternFly masthead to vertically align product logo

--- a/packages/integration/src/main.less
+++ b/packages/integration/src/main.less
@@ -1,4 +1,5 @@
-.navbar-brand-name {
-  height: 18px;
-  margin-top: 4px !important;
+// Fix-up PatternFly masthead to vertically align product logo
+.navbar-brand {
+  line-height: 54px !important;
+  padding: unset !important;
 }
